--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -8,7 +8,6 @@
         <!-- Header Right -->
         <div class="header-right fr">
             <ul class="fr">
-
                 <li class="last">
                     <!-- Utility -->
                     <div class="utility">
@@ -26,7 +25,7 @@
     </div>
     <!-- END Shell -->
     <!-- END Header -->
-    <!--<nav id='cssmenu'>
+    <nav id='cssmenu'>
         <div id="head-mobile"></div>
         <div class="nav-mobile"></div>
         <ul class="shell">
@@ -79,84 +78,9 @@
                 <a href='#'>Reports</a>
             </li>
         </ul>
-    </nav>-->
-    <label for="show-menu" class="show-menu">Show Menu</label>
-    <input type="checkbox" id="show-menu" role="button">
-    <ul id="menu">
-        <li><a href="#">Home</a></li>
-        <li>
-            <a href="#">About</a>
-            <ul class="hidden">
-                <li><a href="#">Who We Are</a></li>
-                <li><a href="#">What We Do</a></li>
-            </ul>
-        </li>
-        <li>
-            <a href="#">Portfolio</a>
-            <ul class="hidden">
-                <li><a href="#">Photography</a></li>
-                <li><a href="#">Web & User Interface Design</a></li>
-                <li><a href="#">Illustration</a></li>
-            </ul>
-        </li>
-        <li><a href="#">News</a></li>
-        <li><a href="#">Contact</a></li>
-    </ul>
+    </nav>
+
 </div>
 
 
 
-
-
-
-
-
-<!--<div class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand">Plastic Manufacturer</a>
-        </div>
-
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a routerLink="/events" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">All Events</a>
-                </li>
-                <li><a routerLink="/events/new" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Create Event</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        Events
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="">Angular Connect</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <div class="navbar-header navbar-right">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a *ngIf="!auth.isAuthenticated()" routerLink="user/login">Login</a>
-                        <a *ngIf="auth.isAuthenticated()" routerLink="user/profile">Welcome {{auth.currentUser.firstName}}</a>
-                    </li>
-                </ul>
-            </div>
-            <form id="searchForm" (ngSubmit)="searchSessions(searchTerm)" class="navbar-form navbar-right">
-                <div class="form-group">
-                    <input [(ngModel)]="searchTerm" name="searchTerm" type="text" class="form-control" placeholder="Search Sessions">
-                </div>
-                <button class="btn btn-default" modal-trigger="searchResults">
-                    Search
-                </button>
-            </form>
-        </div>
-    </div>
-</div>
-
-<simple-modal ElementId="searchResults" title="Matching Sessions">
-    <div class="list-group">
-        <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.id]">{{session.name}}</a>
-    </div>
-</simple-modal>-->
