Incluindo Customer Resin and Api product

--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -35,6 +35,7 @@
                     <li>
                         <a>Customer</a>
                         <ul>
+                            <li><a routerLink="/customerResins" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Resin</a></li>
                             <li><a routerLink="/customerRatings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Rating</a></li>
                             <li><a routerLink="/customerStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Status</a></li>
                             <li><a routerLink="/customerContacteds" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Contacted</a></li>
