Inclusão da tela TargetType

--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -35,6 +35,7 @@
                     <li>
                         <a>Customer</a>
                         <ul>
+                            
                             <li><a routerLink="/customerResins" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Resin</a></li>
                             <li><a routerLink="/customerRatings" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Rating</a></li>
                             <li><a routerLink="/customerStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Status</a></li>
@@ -51,7 +52,8 @@
                             <li><a routerLink="/maritalStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Marital Status</a></li>
                             <li><a routerLink="/genders" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Gender</a></li>
                         </ul>
-                    </li>                            
+                    </li>            
+                    <li><a routerLink="/targetTypes" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Target Type</a></li>                
                     <li><a routerLink="/states" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">State</a></li>                  
                     <li><a routerLink="/pellets" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Pelle</a></li>
                     <li><a routerLink="/categories" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Category</a></li>
