Inclusão  da Tela de produto

--- a/PlasticManufacturer.Client/app/nav/navbar.component.html
+++ b/PlasticManufacturer.Client/app/nav/navbar.component.html
@@ -52,7 +52,8 @@
                             <li><a routerLink="/maritalStatus" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Marital Status</a></li>
                             <li><a routerLink="/genders" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Gender</a></li>
                         </ul>
-                    </li>            
+                    </li>     
+                    <li><a routerLink="/products" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Product</a></li>       
                     <li><a routerLink="/targetTypes" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Target Type</a></li>                
                     <li><a routerLink="/states" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">State</a></li>                  
                     <li><a routerLink="/pellets" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Pelle</a></li>
